# axis-agentic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_anthropic.txt
axis_agentic/: __init__.py  __main__.py  cli.py  init_wizard.py  profile.py  services.py
cockpit/: app.py  app_anthropic.py  app_demo.py  app_demo_anthropic.py  events.py  index.html
data/: .gitignore
data/demo/: manifest.csv
data/eval-018/: manifest.csv
data/eval-020/: manifest.csv
data/eval-100/: manifest.csv
data/eval-300/: manifest.csv
data/train-050/: manifest.csv
docs/: STATE_COMPRESSION.md  TASK_FILE_TEMPLATE.md  task_demo.yaml  task_eval020.yaml  task_eval100.yaml
inference/: __init__.py  anthropic.py  base.py  http.py  mlx.py  transformers.py
orchestrator/: analyst_agent.py  analyst_agent_anthropic.py  api_retry.py  coordinator.py  coordinator_anthropic.py  coordinator_demo.py  coordinator_demo_anthropic.py  evaluator_agent.py  evaluator_agent_anthropic.py  formatting.py  formatting_anthropic.py
orchestrator/engine/: __init__.py  anthropic.py  base.py  openai_compat.py
scripts/: axis_detector.py  batch_eval.py  compare_runs.py  generate_subsets.py  test_nemotron.py  validate_image_level.py
server/: inference_server.py
tools/: analyst_impl.py  analyst_impl_anthropic.py  analyst_tools.json  analyst_tools_anthropic.json  dataset_detect.py  evaluator_impl.py  evaluator_impl_demo.py  evaluator_tools.json  evaluator_tools_anthropic.json
